force-app/main/default/objects/TerritorySnapshotRecordTypeDestination__c/TerritorySnapshotRecordTypeDestination__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TerritorySnapshotRecordTypeDestination</label>
</CustomObject>