force-app/main/default/objects/TerritorySnapshotRecordTypeDestination__c/fields/Inbound_Storage_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Storage_Record_Type__c</fullName>
    <label>Inbound_Storage_Record_Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>