force-app/main/default/objects/TerritorySnapshotRecordTypeDestination__c/fields/Territory_Snapshot_PY_Destination_Field__c.field-meta.xml
<CustomField>
    <fullName>Territory_Snapshot_PY_Destination_Field__c</fullName>
    <label>Territory Snapshot PY Destination Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>