force-app/main/default/objects/TerritorySnapshotRecordTypeDestination__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Inbound_Storage_Record_Type__c</columns>
    <columns>Territory_Snapshot_CY_Destination_Field__c</columns>
    <columns>Territory_Snapshot_PY_Destination_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>